--- a/index.html
+++ b/index.html
@@ -8,35 +8,6 @@
     <!-- Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <!-- Quotes -->
-    <script src="quotes.js"></script>
-    <script type="text/javascript">
-      window.onload = init;
-      function init() {
-        generateNewQuote()
-      };
-
-      function generateNewQuote() {
-        let quoteSize = QUOTEBANK.length;
-        let randomIndex = Math.floor(Math.random() * quoteSize);
-        let randomQuoteData = QUOTEBANK[randomIndex];
-
-        let twitterLink = "https://twitter.com/intent/tweet?hashtags=quotes&related=freecodecamp&text=";
-
-        // Add the Quote
-        let quoteInApiFormat = randomQuoteData.quote.replace(/ /g, "%20");
-        twitterLink += quoteInApiFormat;
-        //Add the Author
-        let authorInApiFormat = randomQuoteData.author.replace(/ /g, "%20");
-        twitterLink += " - " + authorInApiFormat;
-
-        document.getElementById("text").innerText = randomQuoteData.quote;
-        document.getElementById("author").innerText = randomQuoteData.author;
-        document.getElementById("tweet-quote").href = twitterLink;
-      }
-
-    </script>
-
     <style media="screen">
       * {
           margin: 0;
@@ -67,7 +38,34 @@
         Tweet
       </a>
     </wrapper>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+
+    <!-- Random Quote Generator-->
+    <script src="Quotes.js"></script>
+    <script type="text/javascript">
+      window.onload = init;
+      function init() {
+        generateNewQuote()
+      };
+
+      function generateNewQuote() {
+        let quoteSize = QUOTEBANK.length;
+        let randomIndex = Math.floor(Math.random() * quoteSize);
+        let randomQuoteData = QUOTEBANK[randomIndex];
+
+        let twitterLink = "https://twitter.com/intent/tweet?hashtags=quotes&related=freecodecamp&text=";
+
+        // Add the Quote
+        let quoteInApiFormat = randomQuoteData.quote.replace(/ /g, "%20");
+        twitterLink += quoteInApiFormat;
+        //Add the Author
+        let authorInApiFormat = randomQuoteData.author.replace(/ /g, "%20");
+        twitterLink += " - " + authorInApiFormat;
+
+        document.getElementById("text").innerText = randomQuoteData.quote;
+        document.getElementById("author").innerText = randomQuoteData.author;
+        document.getElementById("tweet-quote").href = twitterLink;
+      }
+    </script>
 
     <!-- Bootstrap Bundle With Popper-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
