--- a/index.html
+++ b/index.html
@@ -21,6 +21,22 @@
       a {
         font-size: 1rem;
       }
+
+      .footer {
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        text-align: center;
+        font-size: 16px;
+        padding: 0px;
+      }
+
+      .footer a {
+        padding: 0px;
+        font-size: 16px;
+      }
+
     </style>
 
     <title>Random Quote Machine</title>
@@ -38,6 +54,9 @@
         Tweet
       </a>
     </wrapper>
+
+    <footer class="footer">&copy 2022 <a href="https://martinezdylan.com/" target="_blank">Dylan Martinez</a></footer>
+
 
     <!-- Random Quote Generator-->
     <script src="Quotes.js"></script>
